# payjoin-no-std-harness

./: CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  rustfmt.toml  treefmt.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  hardware_task.md
.github/workflows/: ci.yml
contrib/: lint.sh  update-lock-files.sh
harness-device/: Cargo.toml
harness-device/src/: lib.rs
harness-host/: Cargo.toml
harness-host/src/: lib.rs
harness-proto/: Cargo.toml
harness-proto/src/: lib.rs
