[package]
name = "harness-device"
version = "0.1.0"
edition = "2021"

[dependencies]
harness-proto = { path = "../harness-proto" }
payjoin = { git = "https://github.com/caarloshenriq/rust-payjoin", branch = "feat/payjoin-nostd", default-features = false, features = ["alloc", "v1", "v2"] }
bitcoin = { version = "0.32", default-features = false }
